# clawzero

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VERIFIED_CLAIMS.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  clawzero-action.yml  clawzero-ci.yml  clawzero-scan.yml  engine-parity.yml  mvar-integrated.yml  test.yml
clawgate/: __init__.py
clawguard/: __init__.py  contracts.py  exceptions.py  protect.py  runtime.py  witness.py
clawguard/adapters/: __init__.py  openclaw.py
clawzero/: __init__.py  contracts.py
clawzero/adapters/: __init__.py
demo/: openclaw_attack_demo.py
demo/attack_payloads/: quarterly_report.md
demo/expected_outputs/: allowed_witness_benign.json  blocked_witness_credentials.json  blocked_witness_shell.json
docs/: RELEASE_PROOF_0_1_5.md  ROADMAP.md  architecture.md  attack-demo.md  claims-registry.md  getting-started.md  github-profile-copy.md  index.md  integration-quickstarts.md  openclaw-integration.md  policies.md  release-checklist.md  test-authoring-guide.md  test-suite-audit-summary.md  threat-model.md  witness-artifacts.md
examples/: attack_demo.py  langchain_integration.py  openclaw_integration.py
site/: index.html
src/clawzero/: __init__.py  benchmark.py  cli.py  cli_enhanced.py  contracts.py  doctor.py  exceptions.py  protect.py  protect_agent.py  sarif.py  witness.py
src/clawzero/adapters/: __init__.py  autogen.py  crewai.py  langchain.py  mcp.py
src/clawzero/adapters/openclaw/: __init__.py
src/clawzero/demo/: __init__.py  openclaw_attack_demo.py
src/clawzero/examples/: __init__.py  langchain_integration.py
src/clawzero/policies/: __init__.py  profiles.py
src/clawzero/runtime/: __init__.py  chain_patterns.py  engine.py  session.py
src/clawzero/witnesses/: __init__.py  generator.py  verify.py
tests/: policy_matrix_data.py  test_chain_patterns.py  test_claims.py  test_cli_compliance.py  test_cli_session_wrap.py  test_doctor_cli.py  test_langchain_adapter.py  test_mcp_adapter.py  test_phase3_controls.py  test_phase4_cli.py  test_phaseA_control_plane.py  test_phaseB_cli_package_trust.py  test_phaseB_package_trust.py  test_phaseC_temporal_taint.py  test_phaseD_budget_controls.py  test_policy_matrix_generated.py  test_release_contract.py  test_sarif_export.py  test_session_runtime.py  test_witness_integrity_matrix.py  test_witness_signing.py  test_witness_trust.py
tests/adapters/: test_filesystem_contract_generated.py  test_framework_adapter_matrix_generated.py
tests/adversarial/: test_evasion_generated.py
tests/attack_pack/: __init__.py  test_attack_pack_expanded_generated.py  test_command_injection.py  test_credential_exfil.py  test_data_exfil.py  test_denial_of_service.py  test_lateral_movement.py  test_path_traversal.py  test_persistence.py  test_social_engineering.py  test_supply_chain.py
tests/compliance/: test_eu_ai_act_generated.py
tests/exports/: test_sarif_official_schema_contract.py  test_sarif_witness_export_generated.py
tests/fuzzing/: test_engine_fuzz_extended_generated.py  test_engine_fuzz_generated.py
tests/owasp/: test_asi_2026_generated.py
tests/performance/: test_latency_generated.py
tests/runtime/: test_engine_parity_contract.py
tests/session/: test_cross_session_isolation_generated.py
