[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawzero"
version = "0.1.1"
description = "Deterministic in-path execution boundary for OpenClaw agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "MVAR Security", email = "security@mvar.dev"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mvar-security>=1.4.0",
]

[project.optional-dependencies]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]


[project.scripts]
clawzero = "clawzero.cli:main"

[project.urls]
Homepage = "https://github.com/mvar-security/clawzero"
Documentation = "https://github.com/mvar-security/clawzero/blob/main/README.md"
Repository = "https://github.com/mvar-security/clawzero"
Issues = "https://github.com/mvar-security/clawzero/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clawzero = ["demo/**/*", "examples/**/*"]

[tool.setuptools.exclude-package-data]
clawzero = ["**/__pycache__/*", "**/*.pyc"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
