[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawzero"
version = "0.4.0"
description = "Deterministic execution boundary for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "MVAR Security", email = "security@mvar.dev"}
]
keywords = [
    "ai-security",
    "agent-security",
    "prompt-injection",
    "llm-security",
    "information-flow-control",
    "execution-boundary",
    "openclaw",
    "langchain",
    "crewai",
    "autogen",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "mvar-security>=1.4.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.1.0",
]
crewai = [
    "crewai>=0.1.0",
]
autogen = [
    "pyautogen>=0.2.0",
]
all = [
    "langchain>=0.1.0",
    "crewai>=0.1.0",
    "pyautogen>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "jsonschema>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]


[project.scripts]
clawzero = "clawzero.cli:main"
clawzero-enhanced = "clawzero.cli_enhanced:main"

[project.urls]
Homepage = "https://github.com/mvar-security/clawzero"
Documentation = "https://github.com/mvar-security/clawzero/blob/main/README.md"
Repository = "https://github.com/mvar-security/clawzero"
Issues = "https://github.com/mvar-security/clawzero/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clawzero = ["demo/**/*", "examples/**/*"]

[tool.setuptools.exclude-package-data]
clawzero = ["**/__pycache__/*", "**/*.pyc"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
